restoring pointer cursor and fixing actions alignment

--- a/src/app/src/pages/eval/components/ResultsTable.css
+++ b/src/app/src/pages/eval/components/ResultsTable.css
@@ -161,7 +161,7 @@ table.results-table,
   display: flex;
   gap: 0.5rem;
   position: absolute;
-  top: 1.25rem;
+  top: 1rem;
   right: 0.75rem;
   line-height: 0;
   font-size: 1.25rem;
@@ -174,6 +174,7 @@ table.results-table,
 .results-table tr .cell-actions .action {
   /* using opacity instead of visibility to maintain focus order */
   opacity: 0;
+  line-height: normal;
 }
 
 /* Show all actions on hover */
@@ -212,6 +213,7 @@ table.results-table,
   padding: 0;
   font: inherit;
   appearance: none;
+  cursor: pointer;
 }
 
 .results-table tr .cell-actions .action.active {
